<resources>
    <string name="app_name">ShipMart</string>
    <string name="intro_txt">The amount of money you can save in multiple ways can surprise you. You can save by
        saving your lumpsum eligible for saving, and you can save by cutting down your expenses by various
        percentages.
    We\'ll show you a textual and graphical analysis of your twp different ways of saving and how
    they relate. </string>
    <string name="monthly_salary_text">Place your monthly salary here ...</string>
    <string name="meaning_txt">D-Daily, W-Weekly, M-Monthly</string>
    <string name="go_txt">Go</string>
    <string name="submit">Submit</string>
    <string name="print">Print</string>
    <string name="expenses_txt">Please provide some of your expenses: </string>
    <string name="dairy">Dairy (Milk, Butter, Curd etc.) </string>
    <string name="daily">D </string>
    <string name="monthly">M </string>
    <string name="weekly">W </string>
    <string name="meat">Meat, Fish and Eggs </string>
    <string name="fruits">Fruits and Vegetables </string>
    <string name="street_food">Street Food </string>
    <string name="cafe">Cafe</string>
    <string name="pub">Pub</string>
    <string name="restaurant">Restaurant</string>
    <string name="clothes">Clothes</string>
    <string name="footwear">Footwear</string>
    <string name="daal">Daal, Masala and Oil</string>
    <string name="bakery">Bakery</string>
    <string name="beverages">Beverages</string>
    <string name="snacks">Snacks and Branded Food</string>
    <string name="beauty">Beauty and Hygiene</string>
    <string name="cleaning">Cleaning and Household Goods</string>
    <string name="kitchen">Kitchen</string>
    <string name="babycare">Babycare</string>
    <string name="transport_out">Transport (Outstation) </string>
    <string name="transport_in">Transport (Inter City) </string>
    <string name="others">Others</string>
    <string name="thanks">Thank you for your submission</string>
    <string name="output_intro">This is a short graphical representation of your savings and expenses</string>
    <string name="save_lumpsum">How much would you save if you saved in lumpsum percentages?</string>
    <string name="save_expense">How much would you save if you saved a percentage of each expense?</string>
    <string name="graph_text">Here is some comparison if you could invest these savings for:</string>
    <string name="about_us_text">Lorem Ipsum Dolat Sit Amet\n\nWe are a group of driven and innovative people committed to make your financial
    management easier, efficient and reliable Lorem Ipsum Dolat Sit Amet Lorem Ipsum Dolat Sit Amet
    \nLorem Ipsum Dolat Sit Amet Lorem Ipsum Dolat Sit Amet Lorem Ipsum Dolat Sit Amet Lorem Ipsum Dolat Sit Amet
    Lorem Ipsum Dolat Sit Amet Lorem Ipsum Dolat Sit Amet Lorem Ipsum Dolat Sit Amet Lorem Ipsum Dolat Sit Amet</string>























</resources>
